style.css
@font-face {
	font-family: 'Booton';
	font-style: normal;
	src: url('/assets/BootonUprightVF.woff2') format('woff2');
}

* {
	box-sizing: border-box;
	margin: 0;
	font-synthesis: none !important;
}

html,
body {
	display: grid;
	background-color: white;
	font-family: 'Booton';
	font-size: 16px;
	padding: 0;
	margin: 0;
}

body {
	padding: 2rem;
}

h1 {
	font-size: 2.5rem;
	text-transform: uppercase;
}

h2 {
	font-size: 2rem;
}

a {
	text-decoration: none;
	color: black;
	font-weight: bold;
}

a:hover {
	text-decoration: underline;
}

main {
	display: grid;
	max-width: 60rem;
	margin: auto;
	gap: 4rem;
}

main.root {
	text-align: center;
}

main.root figure {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	align-items: center;
	justify-items: center;
	gap: 2rem;
}

main.root figcaption {
	text-align: center;
	font-size: 1.5rem;
}

section {
	display: grid;
	width: 100%;
	margin: auto;
	gap: 2rem;
}

article {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	align-items: stretch;
	justify-items: stretch;
	gap: 2rem;
}

figure {
	display: grid;
	justify-items: center;
	align-content: start;
	gap: 1rem;
	width: 100%;
}

figure img {
	width: 100%;
	height: auto;
}

table {
	width: 100%;
	max-width: 50%;
	border-width: 1px;
	border-style: solid;
	border-color: black;
	box-sizing: content-box;
	border-collapse: collapse;
}

th,
td {
	padding: 0.5rem;
}

tr {
	border-bottom: 1px solid black;
	padding: 1rem;
}

td {
	height: calc((0.5rem * 3.36) + 1rem);
}

thead tr {
	border-bottom: 0.5rem solid black;
}

ol li {
	margin: 1rem 0;
}

.toc ul {
	list-style: none;
	padding: 0;
	font-weight: bold;
}

.toc ul ul {
	margin-left: 2rem;
}

.toc li {
	margin: 0.5rem 0;
}

.toc a {
	text-decoration: none;
	color: black;
}

.toc a:hover {
	text-decoration: underline;
}

.toc a {
	display: block;
	position: relative;
	overflow: hidden;
}

.toc a:after {
	position: absolute;
	padding-inline-start: .25ch;
	content: " . . . . . . . . . . . . . . . . . . . "
		". . . . . . . . . . . . . . . . . . . . . . . "
		". . . . . . . . . . . . . . . . . . . . . . . "
		". . . . . . . . . . . . . . . . . . . . . . . "
		". . . . . . . . . . . . . . . . . . . . . . . "
		". . . . . . . . . . . . . . . . . . . . . . . "
		". . . . . . . . . . . . . . . . . . . . . . . ";
	text-align: right;
}

.overview-list ol {
	list-style: none;
	counter-reset: overviewList;
	padding-left: 1rem;
}

.overview-list ol > li {
	position: relative;
	margin: 1.5rem 0;
	padding-left: 2rem;
}

.overview-list ol > li:before {
	position: absolute;
	counter-increment: overviewList;
	content: counter(overviewList);
	width: 2rem;
	height: 2rem;
	left: -1rem;
	top: -0.5rem;
	font-size: 1rem;
	line-height: 2rem;
	text-align: center;
	color: white;
	background-color: black;
	border-radius: 3000px;
}

.symbols {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	gap: 1rem;
	align-items: center;
	justify-items: center;
}

.symbols figure {
	display: grid;
	grid-template-rows: repeat(2, 1fr);
	align-items: center;
	height: 100%;
}

.symbols img {
	width: auto;
	height: min(2vw, 1rem);
}

.symbols figure:last-child img {
	width: auto;
	height: min(calc(2vw * 3.36), calc(1rem * 3.36));
}

.icon {
	display: inline-block;
	/* width: fit-content; */
}

.icon img {
	display: inline-block;
	height: 0.5rem;
	width: auto;
}

.icon.last img {
	height: calc(0.5rem * 3.36);
}

hr {
	page-break-before: always;
	break-before: page;
	margin: 2rem 0;
}

@media (max-width: 600px) {
	main {
		max-width: 100%;
	}

	article {
		grid-template-columns: 1fr;
	}

	.overview-list {
		order: 1;
	}

	table {
		max-width: 100%;
	}
}

@media print {
	hr {
		visibility: hidden;
		margin: 0;
	}

	table {
		max-width: 100%;
	}
}

